--- a/docs/api/hardhat/插件.md
+++ b/docs/api/hardhat/插件.md
@@ -2,7 +2,7 @@
 
 ## `hardhat-zksync-solc`
 
-这个插件用于在将Solidity智能合约部署到 zkSync 2.0 之前提供一个方便的接口来编译它们。
+该插件用于将智能合约部署到 zkSync 2.0 之前为编译 Solidity 智能合约提供一个方便的接口。
 
 ### Npm
 
@@ -22,7 +22,7 @@ npm i -D @matterlabs/hardhat-zksync-solc
 
 这个插件通常不会直接在代码中使用。
 
-### 配置
+### Configuration
 
 此插件在项目的 `hardhat.config.ts`文件中配置。 这是一个例子：
 
@@ -50,8 +50,8 @@ networks: {
 - `compilerSource` 表示编译器源，可以是 `docker` 或 `binary`（推荐）。如果尚未安装编译器二进制文件，插件将自动下载它。如果使用 `docker`，您需要在后台运行 Docker desktop，并在实验部分提供 `dockerImage` 和 `tag`。
 - `compilerPath` 是一个包含 `zksolc` 二进制文件路径的字段。默认情况下，使用 `$PATH` 中的二进制文件。如果 `compilerSource` 是 `docker`，这个字段会被忽略。
 - `dockerImage` 和 `tag` 组成编译器 docker 镜像的名称。如果  `compilerSource`  是 `binary`，这些字段将被忽略。
-- `libraries` 如果您的合约使用不可内联的库作为依赖项，则必须在此处定义它们。详细了解[在此处编译库](./compiling-libraries.md)
-- `zksync` 网络选项指示是否在特定网络上启用了 zksolc。默认情况下为“假”。对于您可以仅为特定网络启用“zksync”的多链项目很有用。
+- `libraries` 如果您的合约使用不可内联的库作为依赖项，则必须在此处定义它们。详细了解[编译库的更多信息](./compiling-libraries.md)。
+- `zkSync` 网络选项指示是否在特定网络上启用了 zksolc。默认情况下为 `false`。`zkSync` 对于只能在特定网络启用的多链项目很有用。
 
 ### 命令
 
@@ -61,14 +61,14 @@ networks: {
 
 ## `hardhat-zksync-vyper`
 
-该插件用于在将 Vyper 智能合约部署到 zkSync 2.0 之前为编译 Vyper  智能合约提供一个方便的接口。
+该插件用于将智能合约部署到 zkSync 2.0 之前，为编译 Solidity 智能合约提供一个方便的接口。
 
 ### Npm
 
 [@matterlabs/hardhat-zksync-vyper](https://www.npmjs.com/package/@matterlabs/hardhat-zksync-vyper)
 
 此插件与 [@nomiclabs/hardhat-vyper](https://www.npmjs.com/package/@nomiclabs/hardhat-vyper) 结合使用。
-要使用它，您必须在 hardhat.config.ts 文件中安装并导入这两个插件：
+要使用它，您必须在 `hardhat.config.ts` 文件中安装并导入这两个插件：
 
 ```javascript
 import "@nomiclabs/hardhat-vyper";
@@ -89,7 +89,7 @@ npm i -D @matterlabs/hardhat-zksync-vyper
 
 这个插件通常不会直接在代码中使用。
 
-### 配置
+### Configuration
 
 ```typescript
 zkvyper: {
@@ -116,7 +116,7 @@ networks: {
 - `compilerSource` 表示编译器源，可以是 `docker` 或 `binary`（推荐）。如果尚未安装编译器二进制文件，插件将自动下载它。如果使用 `docker`，您需要在后台运行 Docker desktop，并在实验部分提供 `dockerImage` 和 `tag`。
 - `compilerPath` 是一个包含 `zkvyper` 二进制文件路径的字段。默认情况下，使用 `$PATH` 中的二进制文件。如果 `compilerSource` 是 `docker`，这个字段会被忽略。
 - `dockerImage` 和 `tag` 组成编译器 docker 镜像的名称。如果 compilerSource 是 binary，这些字段将被忽略。
-- `libraries` 如果您的合约使用不可内联的库作为依赖项，则必须在此处定义它们。详细了解[在此处编译库](./compiling-libraries.md)
+- `libraries` 如果您的合约使用不可内联的库作为依赖项，则必须在此处定义它们。详细了解[编译库的更多信息](./compiling-libraries.md)
 - `zksync` 网络选项指示是否在特定网络上启用了 zkvyper。默认情况下为“假”。对于您可以仅为特定网络启用“zksync”的多链项目很有用。
 
 ### Commands
@@ -131,7 +131,7 @@ networks: {
 
 ::: 注意
 
-Contracts must be compiled using the official `@matterlabs/hardhat-zksync-solc` or `@matterlabs/hardhat-zksync-vyper` plugins. Contracts compiled with other compilers will fail to deploy to zkSync using this plugin.
+合约必须使用官方的 `@matterlabs/hardhat-zksync-solc` 或 `@matterlabs/hardhat-zksync-vyper` 插件进行编译。 使用其他插件编译器编译的合约将无法部署到 zkSync。
 
 :::
 
@@ -139,7 +139,7 @@ Contracts must be compiled using the official `@matterlabs/hardhat-zksync-solc` 
 
 [@matterlabs/hardhat-zksync-deploy](https://www.npmjs.com/package/@matterlabs/hardhat-zksync-deploy)
 
-Add the latest version of this plugin to your project with the following command:
+使用以下命令将此插件的最新版本添加到您的项目中：
 
 ```
 # Yarn
@@ -155,7 +155,7 @@ npm i -D @matterlabs/hardhat-zksync-deploy
 
 #### `Deployer`
 
-The main export of this plugin is the `Deployer` class. It is used to wrap a `zksync-web3` Wallet instance and provides a convenient interface to deploy smart contracts. Its main methods are:
+这个插件的主要导出是 `Deployer` 类。 它用于打包一个 `zksync-web3` 钱包实例，并提供一个方便的接口来部署智能合约。 其主要方法有：
 
 ```typescript
 class Deployer {
@@ -233,11 +233,11 @@ class Deployer {
   async extractFactoryDeps(artifact: ZkSyncArtifact): Promise<string[]>
 ```
 
-To see an example script of how to use a `Deployer` to deploy a contract, check out [deployment section of the quickstart](./getting-started.md#write-and-deploy-a-contract).
+要查看如何使用 `Deployer` 部署合约的示例脚本，请查看 [部署部分快速入门](./getting-started.md#write-and-deploy-a-contract)。
 
-### Configuration
+### 配置
 
-Add the following properies in the `hardhat.config.ts` file:
+在`hardhat.config.ts`文件中添加以下属性：
 
 ```json
 zkSyncDeploy: {
@@ -246,15 +246,16 @@ zkSyncDeploy: {
 }
 ```
 
-- `zkSyncNetwork` is a field with the URL of the zkSync node.
-- `ethNetwork` is a field with the URL of the Ethereum node. You can also provide network name (e.g. `goerli`) as the value of this field. In this case, the default `ethers` provider for the network will be used.
+- `zkSyncNetwork` 是一个包含 zkSync 节点 URL 的字段。
+- `ethNetwork` 是一个带有以太坊节点 URL 的字段。 
+- 您还可以提供网络名称（例如 `goerli`）作为该字段的值。 在这种情况下，将使用网络的默认 `ethers` 提供程序。
 
-### Commands
+### 命令
 
-`hardhat deploy-zksync` -- runs through all the scripts in the `deploy` folder. To run a specific script, add the `--script` argument, e.g. `hardhat deploy-zksync --script 001_deploy.ts` will run script `./deploy/001_deploy.ts`.
+`hardhat deploy-zksync` -- 运行 `deploy` 文件夹中的所有脚本。 要运行特定脚本，请添加 `--script` 参数，例如 `hardhat deploy-zksync --script 001_deploy.ts` 将运行脚本 `./deploy/001_deploy.ts`。
 
-::: tip
+::: 提示
 
-Note that deployment scripts must be placed in the `deploy` folder!
+请注意，部署脚本必须放在 `deploy`文件夹中!
 
 :::
