--- a/docs/api/hardhat/编译库.md
+++ b/docs/api/hardhat/编译库.md
@@ -2,20 +2,20 @@
 
 Solidity库可以分为两类：
 
-- _Inlinable_。那些只包含 `private` or `internal` 方法的。 由于它们永远无法从外部调用，因此 Solidity 编译器将它们内联，并且将这些库的代码成为使用它们代码的一部分，即：不使用外部调用来访问库的方法。
-- *Non-inlinable*。 那些至少有一个 `公共` 或 `外部` 方法的。 虽然它们可能会被 Solidity 编译器内联，但在编译为 Yul 表示时，它们不会内联。 由于 Yul 是编译为 zkEVM 字节码的中间步骤，这意味着这些库不能被 zkSync 编译器内联。
+- _内联（Inlinable）_。那些只包含 `private` or `internal` 方法的。 由于它们永远无法从外部调用，因此 Solidity 编译器将它们内联，并且将这些库的代码成为使用它们代码的一部分，即：不使用外部调用来访问库的方法。
+- *不可内联（Non-inlinable）*。 那些至少有一个 `public` 或 `external` 方法的。 虽然它们可能会被 Solidity 编译器内联，但在编译为 Yul 表示时，它们不会内联。 因为 Yul 是编译 zkEVM 字节码的中间步骤，这意味着这些库不能被 zkSync 编译器内联。
 
-**实际上，这意味着需要单独部署具有公共方法的库，并且在编译主合同时将它们的地址作为参数传递。** 使用此库的方法将替换为对其地址的调用。
+**这意味着需要单独部署具有公共方法的库，并且在编译主合约时将它们的地址作为参数传递。** 库的使用方法将替换为对其地址的调用。
 
-## OpenZeppelin 公用程序库
+## OpenZeppelin 实用程序库
 
-请注意， 绝大多数OpenZeppelin 的公用程序库都是可内联的。这意味着不需要做任何进一步的的操作来使它们编译。
+请注意， 绝大多数 OpenZeppelin 的实用程序库都是可内联的，这意味着不需要做进一步的操作编译。
 
-这一节只描述了不可内联的库的编译。
+这一节只介绍了不可内联库的编译。
 
 ## 示例
 
-假设我们有一个计算数字平方的小库:
+假设我们有一个计算数字平方的小型库：
 
 ```solidity
 pragma solidity ^0.8.0;
@@ -27,7 +27,7 @@ library MiniMath {
 }
 ```
 
-而有一个智能合约，使用这个库
+而有一个智能合约，使用这个库：
 
 ```solidity
 pragma solidity ^0.8.0;
@@ -44,7 +44,7 @@ contract Main {
 }
 ```
 
-如果您尝试按照 [入门](./getting-started.md) 指南中的指南使用这两个文件创建项目，`yarn hardhat compile` 命令将失败并出现以下错误：
+如果您尝试按照 [入门](./getting-started.md)  指南使用这两个文件创建项目，`yarn hardhat compile` 命令将失败并出现以下错误：
 
 ```
 Error in plugin @matterlabs/hardhat-zksync-solc: LLVM("Library `contracts/MiniMath.sol:MiniMath` not found")
@@ -52,7 +52,9 @@ Error in plugin @matterlabs/hardhat-zksync-solc: LLVM("Library `contracts/MiniMa
 
 该错误告诉我们，应该提供 `MiniMath` 库的地址。
 
-要解决此问题，您需要创建 _一个单独的项目_ ，其中仅存放库文件。 _仅_ 将库部署到 zkSync 后，您应该获取已部署库的地址并将其传递给编译器设置。 部署库的过程与部署智能合约的过程相同。 您可以在[入门](./getting-started.md#write-and-deploy-a-contract) 指南中了解如何在 zkSync 上部署智能合约。
+要解决此问题，您需要创建 _一个单独的项目_ ，其中仅存放库文件。 _仅_ 将库部署到 zkSync 后，您应该获取已部署库的地址并将其传递给编译器设置。 
+
+部署库的过程与部署智能合约的过程相同。 您可以在 [入门](./getting-started.md#write-and-deploy-a-contract) 指南中了解如何在 zkSync 上部署智能合约。
 
 假设已部署库的地址是 `0xF9702469Dfb84A9aC171E284F71615bd3D3f1EdC`。 要将此地址传递给编译器参数，请打开`Main` 合约所在项目的`harhdat.config.ts` 文件，并在`zksolc` 插件属性中添加`libraries` 部分：
 
@@ -94,7 +96,7 @@ module.exports = {
 };
 ```
 
-库的地址在以下几行中传递：
+库的地址在以下代码中传递：
 
 ```typescript
 libraries: {
