--- a/docs/api/java/入门.md
+++ b/docs/api/java/入门.md
@@ -2,9 +2,9 @@
 
 在本指南中，我们将演示如何:
 
-1. 连接到zkSync网络。
-2. 将资产从以太坊存入zkSync。
-3. 转移和提取资金（本地和ERC20代币）。
+1. 连接到 zkSync 网络。
+2. 将资产从以太坊存入 zkSync 。
+3. 转移和提取资金（本地和 ERC20 代币）。
 4. 部署智能合约。
 5. 与智能合约交互。
 
@@ -41,7 +41,7 @@ dependencies {
 
 ## 运行 SDK 实例
 
-要开始使用这个SDK，你只需要传入一个提供的配置。
+要开始使用这个 SDK ，你只需要传入一个提供的配置。
 
 ```java
 import io.zksync.protocol.zksync;
@@ -54,7 +54,7 @@ public class Main {
 }
 ```
 
-## Ethereum 签名
+## 以太坊签名
 
 ::: 警告
 
@@ -83,7 +83,7 @@ public class Main {
 
 ## 创建钱包
 
-要在 zksync 中控制您的帐户，请使用 `zksync.crypto.signer.EthSigner`。 它可以使用密钥签署交易并将交易发送到 zksync 网络。
+要在 zkSync 中控制您的帐户，请使用 `zksync.crypto.signer.EthSigner`。 它可以使用密钥签署交易并将交易发送到 zkSync 网络。
 
 ```java
 import io.zksync.crypto.signer.EthSigner;
@@ -102,7 +102,7 @@ public class Main {
 
 ## 交易
 
-zksync 支持以太坊的`Legacy`和`EIP-1155`交易，但部署合约除外。
+zkSync 支持以太坊的`Legacy`和`EIP-1155`交易，但部署合约除外。
 
 ```java
 import io.zksync.abi.TransactionEncoder;
