--- a/docs/api/python/入门.md
+++ b/docs/api/python/入门.md
@@ -1,33 +1,31 @@
-# Getting started
+# 入门
 
-In this guide we will demonstrate how to:
+在本指南中，我们将演示如何：
 
-1. Connect to the zkSync network.
-2. Deposit assets from Ethereum into zkSync.
-3. Check balances.
-4. Transfer and withdraw funds (native and ERC20 tokens).
-5. Deploy a smart contract.
-6. Deploy a smart contract with create2.
+1. 连接到 zkSync 网络。
+2. 将资产从以太坊存入 zkSync。
+3. 检查余额。
+4. 转移和提取资金（原生和 ERC20 代币）。
+5. 部署智能合约。
+6. 使用 create2 部署智能合约。
 
-## Prerequisite
+## 先决条件
 
-This guide assumes that you are familiar with [Python](https://docs.python.org/3/) programming language.
+本指南假定您熟悉 [Python](https://docs.python.org/3/) 编程语言。
 
-##  Installation
+## 安装
 
-To install the SDK with the `pip install` command, run the following:
+要使用 `pip install`命令安装 SDK，请运行以下命令：
 
 ```py
-
 pip install zksync2
-
 ```
-## Instantiating the SDK
 
-To start using this SDK, you just need to pass in a provider configuration.
+## 实例化 SDK
+
+要开始使用此 SDK，您只需传入提供程序配置。
 
 ```py
-
 from web3 import Web3
 from zkSync2.module.module_builder import zkSyncBuilder
 
@@ -36,21 +34,19 @@ ZKSYNC_NETWORK_URL = "https://zksync2-testnet.zksync.dev"
 
 eth_web3 = Web3(Web3.HTTPProvider(URL_TO_ETH_NETWORK))
 zkSync_web3 = zkSyncBuilder.build(ZKSYNC_NETWORK_URL)
-
 ```
 
-## Ethereum signer
+## 以太坊签名
 
-::: warning
+:::警告
 
-⚠️ Never commit private keys to file tracking history, or your account could be compromised.
+⚠️ 切勿将私钥提交给文件跟踪历史记录，否则您的帐户可能会受到威胁。
 
 :::
 
-Ethereum signer is represented by the `PrivateKeyEthSigner` abstract class from `zkSync2.signer.eth_signer`.
+以太坊签名者由来自 `zkSync2.signer.eth_signer` 的 `PrivateKeyEthSigner` 抽象类表示。
 
 ```py
-
 from eth_account import Account
 from eth_account.signers.local import LocalAccount
 from zkSync2.signer.eth_signer import PrivateKeyEthSigner
@@ -60,14 +56,13 @@ PRIVATE_KEY = os.environ.get("YOUR_PRIVATE_KEY")
 
 account: LocalAccount = Account.from_key(PRIVATE_KEY)
 signer = PrivateKeyEthSigner(account, chain_id)
-
 ```
-## Depositing funds
 
-This example shows how to deposit funds into an address.
+## 存入资金
+
+此示例显示如何将资金存入地址。
 
 ```py
-
 from web3 import Web3
 from web3.middleware import geth_poa_middleware
 from eth_account import Account
@@ -99,15 +94,13 @@ def deposit():
 
 if __name__ == "__main__":
     deposit()
-
 ```
 
-## Checking balance
+## 检查余额
 
-This example shows how to check your balance on the zkSync network.
+这个例子展示了如何检查你在 zkSync 网络上的余额。
 
 ```py
-
 from eth_account import Account
 from eth_account.signers.local import LocalAccount
 from zkSync2.module.module_builder import zkSyncBuilder
@@ -124,15 +117,13 @@ def get_account_balance():
 
 if __name__ == "__main__":
     get_account_balance()
-
 ```
 
-## Performing a transfer
+## 执行传输
 
-This example shows how to execute a transfer from one account to another, on the zkSync network.
+这个例子展示了如何在 zkSync 网络上执行从一个账户到另一个账户的转账。
 
 ```py
-
 from eth_typing import HexStr
 from web3 import Web3
 from zkSync2.module.request_types import create_function_call_transaction
@@ -183,16 +174,13 @@ def transfer_to_self():
 
 if __name__ == "__main__":
     transfer_to_self()
-
-
 ```
 
-## Transfer funds (ERC20 tokens)
+## 转移资金（ERC20代币）
 
-This example shows how to transfer ERC20 tokens into your account on the zkSync network.
+这个例子展示了如何将 ERC20 代币转移到您在 zkSync 网络上的账户中。
 
 ```py
-
 from zkSync2.module.request_types import create_function_call_transaction
 from zkSync2.manage_contracts.erc20_contract import ERC20FunctionEncoder
 from zkSync2.module.module_builder import zkSyncBuilder
@@ -248,16 +236,13 @@ def transfer_erc20_token():
 
 if __name__ == "__main__":
     transfer_erc20_token()
-
-
 ```
 
-## Withdrawing funds
+## 提取资金
 
-This examples shows how to withdraw funds into your account.
+此示例显示如何将资金提取到您的帐户中。
 
 ```py
-
 from decimal import Decimal
 from eth_typing import HexStr
 from zkSync2.module.request_types import create_function_call_transaction
@@ -319,20 +304,19 @@ def withdraw():
 
 if __name__ == "__main__":
     withdraw()
-
-
 ```
 
-## Deploy a smart contract
-With zkSync, you can deploy a contract using the `create` method, by simply building the contract into a binary format and deploying it to the zkSync network.
+## 部署智能合约
 
-In the next steps, we will guide you through how it works.
+使用 zkSync，您可以使用 `create` 方法部署合约，只需将合约构建为二进制格式并将其部署到 zkSync 网络即可。
 
-### Step1: Create a contract
-Here is a simple contract:
+在接下来的步骤中，我们将指导您了解其工作原理。
+
+### 第一步：创建合约
+
+这是一个简单的合约：
 
 ```solidity
-
 pragma solidity ^0.8.0;
 
 contract Counter {
@@ -346,25 +330,24 @@ contract Counter {
         return value;
     }
 }
-
 ```
+
 > It must be compiled by zkSync compiler only!
 
-After compilation there must be 2 files with the:
+编译后必须有 2 个文件：
 
 - contract binary representation
 - contract ABI in JSON format
 
-### Step 2: Deploy the contract
+### 第二步：部署合约
 
-To deploy the contract, contract ABI is needed for calling its methods in the standard `web3` way.
+要部署合约，需要合约 ABI 以标准的“web3”方式调用。
 
-In some cases, you would need to get the contract address before deploying it.
+在某些情况下，您需要在部署之前获取合约地址。
 
-Here's an example of how you would do it.
+这是您将如何做的示例。
 
 ```py
-
 import json
 from pathlib import Path
 from eth_typing import HexStr
@@ -466,16 +449,15 @@ def deploy_contract_create():
 
 if __name__ == "__main__":
     deploy_contract_create()
-
 ```
-## Deploy a smart contract with Create2
 
-Using the [CREATE2](https://eips.ethereum.org/EIPS/eip-1014) opcode gives you the ability to predict the address where a contract will be deployed, without ever having to do so, hence improving user onboarding.
+## 使用 Create2 部署智能合约
 
-Similar to the `create` method above, here's the implementation on how you can deploy a contract using the `create2` method on zkSync.
+使用 [CREATE2](https://eips.ethereum.org/EIPS/eip-1014) 操作码让您能够预测将部署合约的地址，但无需这样做，从而方便用户的加入。
+
+类似上面的 `create` 方法，这里是关于如何使用 `create2` 在 zkSync 上部署合约的实现。
 
 ```py
-
 import os
 import json
 from pathlib import Path
@@ -578,11 +560,10 @@ def deploy_contract_create2():
 
 if __name__ == "__main__":
     deploy_contract_create2()
-
 ```
 
-::: warning
+::: 提示
 
-⚠️ This section of the docs is still in progress and will be updated with more detailed information soon.
+⚠️ 这一部分文档仍在更新中，不久将会更新更详细的信息。
 
 :::
