--- a/docs/api/go/入门.md
+++ b/docs/api/go/入门.md
@@ -2,20 +2,20 @@
 
 在指南中，我们将演示如何:
 
-1. 连接到zkSync网络。
-2. 将资产从以太坊存入zkSync。
+1. 连接到 zkSync网络。
+2. 将资产从以太坊存入 zkSync网络。
 3. 转移和提取资金。
 4. 部署一个智能合约。
 5. 与智能合约进行互动。
 
 ## 先决条件
 
-此指南假定你熟悉 [Go](https://go.dev/doc/) 编程语言。
-Go的版本应该>=1.17, 并且需要Go模块。
+此指南假定你熟悉  [Go](https://go.dev/doc/)  编程语言。
+Go 的版本应该>=1.17, 并且需要 Go 模块。
 
 ## 安装
 
-使用   `go get` 命令来安装SDK，并运行以下命令:
+使用   `go get` 命令来安装 SDK，并运行以下命令:
 
 ```go
 go get github.com/zksync-sdk/zksync2-go
@@ -25,11 +25,11 @@ go get github.com/zksync-sdk/zksync2-go
 
 要开始使用 SDK，您只需上传一个提供的配置。
 
-使用  `ZkSync Provider`, `EthereumProvider` 和 `Wallet`,你可以通过ZkSync网络执行所有基本操作。
+使用  `ZkSync Provider`, `EthereumProvider` 和 `Wallet`,可以通过 zkSync网络 执行所有基本操作。
 
 ::: 警告
 
-⚠️ 切勿将私钥提交给文件追踪历史记录，否则你的账户可能会被泄露。
+⚠️ 切勿将私钥提交给文件追踪历史记录，否则您的账户可能会被泄露。
 
 :::
 
@@ -140,7 +140,7 @@ func main() {
 
 ## 部署智能合约
 
-你可以通过以下方式访问智能合约部署器界面：
+您可以通过以下方式访问智能合约部署器界面：
 
 ```go
     package main
