--- a/docs/dev/developer-guides/bridging/l1-l2.md
+++ b/docs/dev/developer-guides/bridging/l1-l2.md
@@ -1,40 +1,38 @@
-# L1 -> L2 communication
+# L1->L2 通信
 
-This section describes the interface for interaction with zkSync from L1. It assumes that you are already familiar with the basic concepts of working with the priority queue. If you are new to this topic, you can read the conceptual introduction [here](./l1-l2-interop.md#priority-queue). If you want to dive straight into the code, then you can read the cross-chain governance [tutorial](../../tutorials/cross-chain-tutorial.md).
+本节介绍 L1 与 zkSync 交互的接口，这里假设您已经熟悉使用优先级队列的基本概念。如果您不清楚什么是优先级队列，您可以通过[这里](./l1-l2-interop.md#priority-queue)阅读概念介绍。如果您想直接进研究代码，那么您可以阅读跨链治理[跨链治理l](../../tutorials/cross-chain-tutorial.md)的教程。
 
-## Structure
+## 架构
 
-For the most common usecase, there is "baseFee" for a transaction, which basically means the minimum amount the user has to pay to the operator for him to include this transaction. It is derived based on the `ergsLimit` for a transaction and the gas price on L1.
-In addition, whatever fee the user pays above is called **layer2 tip** and will be used to sort the transactions by the provided L2 fee.
+对于最常见的用例，交易有基础费用（base fee），这基本上意味着用户必须向运营者支付的最低金额才能包含此交易。它是根据交易的 `ergsLimit` 和 L1 上的 gas 价格推导出来的。
+此外，用户在上面支付的任何费用都被称为**layer2 tip**，将用于按提供的 L2 费用对交易进行排序。
 
-At the moment, all the L1-> L2 transactions are served at the first-in-first-out basis, but in the future we will introduce "priority heap", which will allow for sorting the 
-transactions.
-Basic costs are defined in gas and not in ETH, so the actual amount of ether that the submission of the transaction will cost depends on 
-the transaction gas price. Generally the flow for calling any of these methods should be the following:
+目前，所有 L1-> L2 交易都是按照先进先出的原则提供服务的，但将来我们将引入“priority heap”，它将允许对交易进行排序。
+基础费用是以 gas 而非 $ETH 定义，因此提交交易将花费的实际以太币数量取决于交易 gas 价格。通常调用这些方法的流程应该如下：
 
-1. Fetch the gas price that you will use to send the transaction.
-2. Get the base cost for the transaction.
-3. Send the transaction including the needed `value`.
+1. 获取用于发送交易的 gas 价格。
+2. 获取交易的基础费用。
+3. 发送包含所需 `value` 的交易。
 
-## Using contract interface in your project
+## 在你的项目中使用合约接口
 
-To interact with the zkSync mailbox contract using Solidity, you need to use the zkSync contract interface. There are two main ways to get it:
+要使用 Solidity 与 zkSync 邮箱合约进行交互，您需要使用 zkSync 合约接口。获取途径主要有两种：
 
-- By importing it from the `@matterlabs/zksync-contracts` npm package (preferred).
-- By downloading the contracts from the [repo](https://github.com/matter-labs/v2-testnet-contracts).
+- 通过从`@matterlabs/zksync-contracts` npm 包中导入（首选）。
+- 从 [github 库](https://github.com/matter-labs/v2-testnet-contracts)中下载合约。
 
-The `@matterlabs/zksync-contracts` package can be installed by running the following command:
+`@matterlabs/zksync-contracts` 安装包可以通过运行以下命令来安装：
 
 ```
 yarn add -D @matterlabs/zksync-contracts
 ```
 
-In the examples below we assume that the interface is accessed via the `@matterlabs/zksync-contracts` npm package.
+在下面的例子中，我们假设接口是通过`@matterlabs/zksync-contracts` npm 包访问的。
 
-### Getting the base cost
+### 获取基础费用
 
 
-The following view function returns the amount of ETH that is needed to be supplied by the user to cover the base cost of the transaction.
+以下视图（view）函数返回用户需要提供的 ETH 数量，用来支付交易的基础费用。
 
 ```solidity
 function l2TransactionBaseCost(
@@ -44,13 +42,13 @@ function l2TransactionBaseCost(
 ) external view returns (uint256);
 ```
 
-- `_gasPrice` is a parameter that contains the transaction gas price.
-- `_ergsLimit` is a parameter that contains the ergs limit of the transaction call. You can learn more about ergs and the zkSync fee system [here](../transactions/fee-model.md).
-- `_calldataLength` is a parameter that contains the length of the calldata in bytes.
+- `_gasPrice` 是一个包含交易 gas 价格的参数。
+- `_ergsLimit` 是一个包含交易调用的 ergs 限制的参数。您可以通过[这里](../transactions/fee-model.md)了解更多关于 ergs 和 zkSync 费用机制的信息。
+- `_calldataLength` 是一个以字节为单位包含 calldata 长度的参数。
 
-### Interface
+### 接口
 
-The following function returns the canonical hash or the requested transaction, that can be used to track the execution of the transaction in L2.
+以下函数返回典型哈希值（canonical hash）或请求的交易，可用于跟踪 L2 中交易的执行。
 
 ```solidity
 function requestL2Transaction(
@@ -62,16 +60,16 @@ function requestL2Transaction(
 ) external payable returns (bytes32 txHash);
 ```
 
-- `_contractAddressL2` is a parameter that defines the address of the contract to be called.
+- `_contractAddressL2` 是定义要调用的合约地址的参数。
 - `_l2Value` is a parameter that defines the amount of ETH you want to pass with the call to L2. This number will be used as `msg.value` for the transaction.
-- `_calldata` is a parameter that contains the calldata of the transaction call. It can be encoded the same way as on Ethereum.
-- `_ergsLimit` is a parameter that contains the ergs limit of the transaction call. You can learn more about ergs and the zkSync fee system [here](../transactions/fee-model.md).
+- `_calldata` 是一个参数，它定义了您想在调用 L2 时发送的 ETH 的数量。该数量将被用作交易的 `msg.value`。
+- `_ergsLimit` 是一个包含交易调用的 ergs 限制的参数。您可以通过[这里](../transactions/fee-model.md)了解更多关于 ergs 和 zkSync 费用机制的信息。
 
-- `_factoryDeps` is a list of bytecodes. It should contain the bytecode of the contract being deployed. If the contract being deployed is a factory contract, i.e. it can deploy other contracts, the array should also contain the bytecodes of the contracts that can be deployed by it.
+- `_factoryDeps` 是一个字节码的列表。它应该包含被部署的合约的字节码。如果被部署的合约是一个工厂合约（factory contract），即它可以部署其他合约，该数组还应该包含它可以部署的合约的字节码。
 
-With the method call, some amount of ETH should be supplied to cover the base cost of the transaction (including the `_l2Value`) + layer 2 operator tip.
+随着模块的调用，应该提供一定数量的 ETH 来支付交易的基础费用包括（ `_l2Value`+第 2 层运营者的小费）。
 
-### Examples
+### 示例
 
 #### Solidity
 
