--- a/docs/dev/developer-guides/bridging/l1-l2.md
+++ b/docs/dev/developer-guides/bridging/l1-l2.md
@@ -8,7 +8,7 @@
 此外，用户在上面支付的任何费用都被称为**layer2 tip**，将用于按提供的 L2 费用对交易进行排序。
 
 目前，所有 L1-> L2 交易都是按照先进先出的原则提供服务的，但将来我们将引入“priority heap”，它将允许对交易进行排序。
-基础费用是以 gas 而非 $ETH 定义，因此提交交易将花费的实际以太币数量取决于交易 gas 价格。通常调用这些方法的流程应该如下：
+基础费用是以 gas 而非 $ETH 定义，因此提交交易实际消耗的以太币数量取决于交易 gas 价格。通常调用这些方法的流程应该如下：
 
 1. 获取用于发送交易的 gas 价格。
 2. 获取交易的基础费用。
