--- a/docs/dev/developer-guides/bridging/l2-l1.md
+++ b/docs/dev/developer-guides/bridging/l2-l1.md
@@ -1,37 +1,37 @@
 # L2 -> L1 通信
 
-This section describes the interface to interact with Ethereum from L2. It assumes that you are already familiar with the basic concepts of working with L2 -> L1 communication. If you are new to this topic, you can read the conceptual introduction [here](./l1-l2-interop.md#l2-l1-communication).
+本节介绍从 L2 与以太坊交互的接口。它假定您已经熟悉使用 L2 -> L1 通信的基本概念。如果您还不熟悉此概念，可以在[此处](./l1-l2-interop.md#l2-l1-communication)阅读概念介绍。
 
-## Structure
+## 架构
 
 
-Unlike L1 -> L2 communication, it is impossible to directly initialize transactions from L2 to L1. However, you can send an arbitrary-length message from zkSync to Ethereum, and then handle the received message on an L1 smart contract.  To send a message from the L2 side, you should call the `sendToL1` method from the [messenger system contract](../contracts/system-contracts.md#understanding-system-contracts##IL1Messenger). It accepts only the bytes of the message that is sent to the zkSync smart contract on Ethereum. 
+与 L1->L2 通信不同，不可能直接将交易从 L2 初始化到 L1。然而，您可以从 zkSync 向以太坊发送一个任意长度的消息，然后在 L1 智能合约上处理收到的消息。 要从 L2 端发送消息，您应该从[消息系统合约(Messenger system contract)](../contracts/system-contracts.md#understanding-system-contracts##IL1Messenger)调用 `sendToL1` 模块。它只接收发送到以太坊上的 zkSync 智能合约的字节信息。
 
-From the L1 side, the zkSync smart contract provides the method `proveL2MessageInclusion` to prove that the message was sent to L1 and included in a zkSync block.
+从 L1 端来看，zkSync 智能合约提供了 `proveL2MessageInclusion` 模块来证明消息已发送到 L1 并包含在 zkSync 区块中。
 
-## Sending a message from L2 to L1
+## 从 L2 向 L1 发送消息
 
-Sending messages from the L2 side requires users to call the `sendToL1` method from the [Messenger system contract](../contracts/system-contracts.md#understanding-system-contracts##IL1Messenger). This method accepts only the bytes of the message that is being sent to the zkSync smart contract on L1.
+从 L2 端发送消息需要调用[消息系统合约(Messenger system contract)](../contracts/system-contracts.md#understanding-system-contracts##IL1Messenger)中的 `sendToL1` 模块。它只接收发送到以太坊上的 zkSync 智能合约的字节信息。
 
 ```
 function sendToL1(bytes memory _message) external returns (bytes32 messageHash);
 ```
 
-- `_message` is a parameter that contains the raw bytes of the message
+- `_message` 是否包含消息的原始字节的参数。
 
-::: tip
+::: 小提示
 
-The message sender will be determined from context.
+信息发送者将根据上下文确定。
 
 :::
 
-This function sends a message from L2 and returns the keccak256 hash of the message bytes. The message hash can be used later to get proof that the message was sent on L1. Its use is optional and is for convenience purposes only.
+这个函数从 L2 发送一个消息，并返回消息字节的 keccak256 哈希值。该消息的哈希值可以在以后用来证明该消息是在 L1 上发送的。它并不是必选项，只是为了方便。
 
-More information about Messenger can be found in the [system contracts section](../contracts/system-contracts.md#understanding-system-contracts##IL1Messenger).
+关于 Messenger 的更多信息可以在[系统合约]（.../contracts/system-contracts.md#understanding-system-contracts##IL1Messenger）一节中找到。
 
-### Examples
+### 示例
 
-#### Sending a message from L2 to L1 using `zksync-web3`
+#### 使用 `zksync-web3` 从 L2 向 L1 发送信息 
 
 ```ts
 import { Wallet, Provider, Contract, utils } from "zksync-web3";
@@ -70,9 +70,9 @@ try {
 }
 ```
 
-#### Smart contract in L2 that sends a message to L1
+#### L2 中的智能合约向 L1 发送消息
 
-The following contract sends its address to L1 via the Messenger system contract:
+以下的合约通过信使系统合约将其地址发送给L1：
 
 ```solidity
 //SPDX-License-Identifier: Unlicense
@@ -91,11 +91,11 @@ contract Example {
 }
 ```
 
-## Prove the inclusion of the message into the L2 block
+## 证明该消息包含在 L2 区块中
 
-From the L1 side, the zkSync smart contract provides an interface to prove that the message was sent to L1 and included in a zkSync block.
+从 L1 方面来看，zkSync 智能合约提供了一个接口，以证明该消息被发送到 L1 并包含在 zkSync 区块中。
 
-The `proveL2MessageInclusion` function from the [Mailbox L1 contract](https://github.com/matter-labs/v2-testnet-contracts/blob/main/l1/contracts/zksync/facets/Mailbox.sol), returns a boolean value that indicates that a message with such parameters, was sent to L1.
+[Mailbox L1 合约](https://github.com/matter-labs/v2-testnet-contracts/blob/main/l1/contracts/zksync/facets/Mailbox.sol) 中的 `proveL2MessageInclusion` 函数，返回一个布尔值，表明带有此类参数的消息已被发送到 L1。
 
 ```solidity
 
@@ -113,27 +113,27 @@ The `proveL2MessageInclusion` function from the [Mailbox L1 contract](https://gi
     ) external view returns (bool);
 ```
 
-Here is a detailed description of the required parameters:
+以下是所需参数的详细说明:
 
-- `_blockNumber` is the l1 batch number in which the l2 block was included. It can be retrieved using the `getBlock` method.
-- `_index` is the index of the L2 log in the block. It's returned as `id` by the `getMessageProof` method of the `zksync-web3` API.
-- `_message` is a parameter that contains the full information of the message sent. It should be an object containing:
-  - `sender`: the address that sent the message from L2.
-  - `data`: the message sent in bytes. 
-  - `txNumberInBlock`: the index of the transaction in the L2 block, which is returned as `transactionIndex` using `getTransaction`
-- `_proof` is a parameter that contains the Merkle proof of the message inclusion. It can be retrieved either from observing Ethereum or received from the `getMessageProof` method of the `zksync-web3` API.
+- `_blockNumber` 是包含 l2 区块的 l1 批次号。可以使用 `getBlock` 模块来获取。
+- `_index` 是区块中 L2 日志的索引。它被 `zksync-web3` API 的 `getMessageProof` 模块作为 `id` 返回。
+- `_message` 包含了所发送消息的全部信息的参数。它应该是一个对象，包含:
+  - `sender`: 从 L2 发送消息的地址。
+  - `data`: 以字节为单位发送的消息。
+  - `txNumberInBlock`: 交易在 L2 区块中的索引，使用 `getTransaction` 返回 `transactionIndex`。
+- `_proof` 是一个参数，包含了消息所包含的默克尔证明。它可以通过观察以太坊来检索，也可以从 `zksync-web3` API 的 `getMessageProof` 中获取。
 
-::: tip Important
+::: 重要提示
 
-Note that the L2 block of your transaction must be verified (and hence the transaction finalized) before prooving the inclusion in L1.
+请注意，您的交易的 L2 区块必须在证明包含在 L1 区块之前被验证（由此交易被最终完成）。
 
 :::
 
-### Example
+### 示例
 
-#### L1 message processing contract
+#### L1 消息处理合约
 
-The following contract receives the information of the transaction sent to the L2 messenger contract and proves that it was included in an L2 block.
+下面的合约接收发送到 L2 信使合约的交易信息，并证明它包含在 L2 区块中。
 
 ```solidity
 //SPDX-License-Identifier: Unlicense
@@ -186,9 +186,9 @@ contract Example {
 ```
 
 
-#### End to end
+#### 终端到终端
 
-The following script sends a message from L2 to L1, retrieves the message proof, and validates that the message received in L1 came from an L2 block.
+下面的脚本从 L2 向 L1 发送一条消息，获取消息证明，并验证 L1 中接收到的消息是否来自 L2 区块。
 
 ```typescript
 import * as ethers from "ethers";
