--- a/docs/dev/developer-guides/bridging/l2-l1.md
+++ b/docs/dev/developer-guides/bridging/l2-l1.md
@@ -2,7 +2,7 @@
 
 本节介绍从 L2 与以太坊交互的接口。它假定您已经熟悉使用 L2 -> L1 通信的基本概念。如果您还不熟悉此概念，可以在[此处](./l1-l2-interop.md#l2-l1-communication)阅读概念介绍。
 
-## 架构
+## 通信
 
 与 L1->L2 通信不同，不可能直接将交易从 L2 初始化到 L1。然而，您可以从 zkSync 向以太坊发送一个任意长度的消息，然后在 L1 智能合约上处理收到的消息。 要从 L2 端发送消息，您应该从[消息系统合约(Messenger system contract)](../contracts/system-contracts.md#understanding-system-contracts##IL1Messenger)调用 `sendToL1` 模块。它只接收发送到以太坊上的 zkSync 智能合约的字节信息。
 
@@ -18,7 +18,7 @@ function sendToL1(bytes memory _message) external returns (bytes32 messageHash);
 
 - `_message` 是否包含消息的原始字节的参数。
 
-::: 小提示
+::: tip
 
 信息发送者将根据上下文确定。
 
@@ -121,7 +121,7 @@ contract Example {
   - `txNumberInBlock`: 交易在 L2 区块中的索引，使用 `getTransaction` 返回 `transactionIndex`。
 - `_proof` 是一个参数，包含了消息所包含的默克尔证明。它可以通过观察以太坊来检索，也可以从 `zksync-web3` API 的 `getMessageProof` 中获取。
 
-::: 重要提示
+::: tip
 
 请注意，您的交易的 L2 区块必须在证明包含在 L1 区块之前被验证（由此交易被最终完成）。
 
